// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should render properly 1`] = `
<div>
  <div
    class="css-w2m1ij"
  >
    <h1
      class="css-5j0tpf"
    />
    <h2
      class="css-140lofm"
    />
    <div
      class="css-rr4yq"
    />
  </div>
</div>
`;

exports[`<Card /> should render properly with children 1`] = `
<div>
  <div
    class="css-w2m1ij"
  >
    <h1
      class="css-5j0tpf"
    />
    <h2
      class="css-140lofm"
    />
    <div
      class="css-rr4yq"
    >
      <div>
        Children
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> should render properly with title and subtitle 1`] = `
<div>
  <div
    class="css-w2m1ij"
  >
    <h1
      class="css-5j0tpf"
    >
      Title
    </h1>
    <h2
      class="css-140lofm"
    >
      Subtitle
    </h2>
    <div
      class="css-rr4yq"
    />
  </div>
</div>
`;
